--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /client/node_modules
+/client/.env
 /.pnp
 .pnp.js
 
@@ -22,3 +23,4 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 node_modules
+
