--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 # dependencies
 /client/node_modules
 /client/.env
+/config
+/config/config.env
 /.pnp
 .pnp.js
 
@@ -12,12 +14,14 @@
 # production
 /client/build
 
+
 # misc
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+
 
 npm-debug.log*
 yarn-debug.log*
